[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlayerShip/PlayerShip.png" type="Texture" id=1]
[ext_resource path="res://PlayerShip/PlayerShip.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PlayerShip" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 2 )

[node name="ShipSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[node name="PlayerShipCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -30, -8, -14, -35, -13, -30, 14, -14, 11, -16, 28, 18, 28, 14, 12, 31, 14, 36, -14, 10, -14 )

[node name="BoostTimer" type="Timer" parent="."]
one_shot = true

[node name="CollideTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="CollideTimer" to="." method="_on_CollideTimer_timeout"]
